syntax = "proto3";

package auth;

option java_multiple_files = true;
option java_package = "com.lobosoft.auth.grpc";

service AuthGrpcService {
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool   valid    = 1;
  string user_id  = 2;
  string username = 3;
}
